<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happy_birthday"
            android:textColor="#ED9513"
            android:textColorLink="#FFFFFF"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <!--        CakeView is a custom SurfaceView that is defined in the app's source code -->
        <cs301.birthdaycake.CakeView
            android:id="@+id/cakeview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/how_many_candles" />

            <SeekBar
                android:id="@+id/seekCandles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/frosting" />

            <Switch
                android:id="@+id/switchcandles"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checked="true"
                android:text="@string/candles" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:switchTextAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/blow_out" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goodbye" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>